Improvements in current version

1. fix to SourceLocator for the case where there are no actual
     paths in the soot classpath. (plam)
2. fix to HashMutableDirectedGraph to remove wayward extra
     preds and succs edges to a removed node. (Felix Kwok, wkwok)
3. fix for Windows classpaths which contain less than two letters.
     Formerly, this crashed in charAt(1).  (plam, reported by Mary Payne)
4. add an option '-A LineNumber' to keep line number attributes in
   source class files. (feng)
5. make SootClass.containsBafBody() public (requested by David Airapetyan);
     avoid creating duplicate names in CommonSubexpressionEliminator
         (requested by Florian Mateoc).  Both changes by plam.
6. added changes by Michael Pan (pan@math.tau.ac.il) which make Soot 
     more parsimonious with respect to memory usage:
     it may use up to 20% less maximum heap space.
     Changes were: - sharing of coffi CONSTANT_Utf8_info objects
                   - SootMethod exceptions list created on demand
                   - get[Sub]Signature() storage hack useful for Sun JDK

Improvements in version 1.2.2 (Thu Mar 29 11:45:13 EST 2001)

1. added \t case for soot.util.StringTools.getQuotedStringOf.
    (reported by Thomas VanDrunen)
2. CFG.java is improved to handle nested JSR/RETs
3. improved some exception message reported by Olivier Zendra.
4. The Jasmin package is also updated to 1.06-s10, the bug in grammer
   for attributes is fixed.
5. replaced 'getNodes().contains()' by 'containsNode()' in 
   "jimple/toolkits/invoke/MethodCallGraph.java", which speeds up
   the call graph construction significantly (by John Jorgensen.)

Improvements in version 1.2.1 (Fri Jan 12 15:22:59 EST 2001)

1. permissions changes and fix to Baf/JasminClass for BooleanType.
2. removal of a UnitGraph hack that shouldn't have been there.
3. internal changes to cmdline parsing, watch for bigger changes coming
4. fix by patrice to work around stupid jar bug